force-app/main/default/objects/ssot__AgentServicePresence__dlm/fields/ssot__AtCapacityDuration__c.field-meta.xml
<CustomField>
    <fullName>ssot__AtCapacityDuration__c</fullName>
    <label>At Capacity Duration</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AtCapacityDuration</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>