force-app/main/default/objects/ssot__AgentServicePresence__dlm/fields/ssot__AverageCapacity__c.field-meta.xml
<CustomField>
    <fullName>ssot__AverageCapacity__c</fullName>
    <label>Average Capacity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AverageCapacity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>