force-app/main/default/objects/ssot__AgentServicePresence__dlm/fields/ssot__ConfiguredCapacity__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConfiguredCapacity__c</fullName>
    <label>Configured Capacity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConfiguredCapacity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>