force-app/main/default/objects/ssot__AgentServicePresence__dlm/fields/ssot__ServicePresenceStatusId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServicePresenceStatusId__c</fullName>
    <label>Service Presence Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServicePresenceStatusId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>