force-app/main/default/objects/ssot__AgentServicePresence__dlm/fields/ssot__StatusEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__StatusEndDate__c</fullName>
    <label>Status End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StatusEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>