force-app/main/default/objects/ssot__AgentServicePresence__dlm/fields/ssot__UserId__c.field-meta.xml
<CustomField>
    <fullName>ssot__UserId__c</fullName>
    <label>User</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UserId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>